# zero2prod

./: .gitignore  Cargo.toml
scripts/: .pre-commit.sh  init_db.sh
src/: configuration.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
